--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# dependencies
+node_modules/
+
+# environment variables
+.env
+
+# build output
+build/
+dist/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# runtime data
+pids
+*.pid
+*.seed
+*.log
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
 # Logs
 logs
 *.log
