--- a/backend/package.json
+++ b/backend/package.json
@@ -22,4 +22,8 @@
 "scripts": {
   "start": "node server.js",
   "dev": "nodemon server.js"
-}
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+}}
